# berg-gpt-moe

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.sisyphus/: boulder.json
.sisyphus/notepads/add-zai-support/: issues.md  learnings.md  problems.md
.sisyphus/plans/: add-zai-fallback.md  add-zai-support.md
orchestrator/: __init__.py  config.py  main.py
orchestrator/agents/: base.py  code_hunter.py  context_analyst.py  deep_fetcher.py  fact_checker.py  fixer.py  gardener.py  privacy_scout.py  registry.py  scholar.py  social_sentiment.py  stub_agents.py  watcher.py  web_scout.py
orchestrator/ai/: __init__.py  gemini.py  zai.py
orchestrator/ai/tests/: test_zai.py
orchestrator/api/: __init__.py  openai_adapter.py
orchestrator/memory/: __init__.py  cold.py  hot.py
orchestrator/utils/: logging.py  metrics.py
schemas/: agents_config.json  redis_schema.yaml
tests/: test_agents.py  test_cold_memory.py  test_hot_memory.py  test_orchestrator.py
