[project]
name = "hive-mind"
version = "2.1.0"
description = "High-Frequency MoE Architecture for Massively Parallel Agent Orchestration"
requires-python = ">=3.10"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
]

[project.dependencies]
# Core FastAPI
fastapi = ">=0.115.0,<0.130.0"
uvicorn = {extras = ["standard"], version = ">=0.29.0,<0.32.0"}
pydantic = ">=2.6.0,<3.0.0"
pydantic-settings = ">=2.2.0,<3.0.0"
python-dotenv = ">=1.0.1"

# AI & Orchestration
langgraph = ">=0.0.26,<0.1.0"
langchain-google-genai = ">=0.1.1,<0.2.0"
google-generativeai = ">=0.4.1,<0.5.0"

# Memory
redis = {extras = ["hiredis"], version = ">=5.0.3,<5.1.0"}
redisvl = ">=0.1.0,<0.2.0"
lancedb = ">=0.5.1,<0.6.0"
numpy = ">=1.26.0,<2.0.0"

# MCP & Tools
mcpagentai = ">=0.1.0,<0.2.0"
tavily-python = ">=0.3.1,<0.4.0"
openai = ">=1.12.0,<2.0.0"
wikipedia = ">=1.4.0,<2.0.0"
arxiv = ">=2.1.0,<3.0.0"
duckduckgo-search = ">=6.0.0,<7.0.0"
youtube-transcript-api = ">=0.6.0,<0.7.0"
praw = ">=7.7.0,<8.0.0"
beautifulsoup4 = ">=4.12.0,<5.0.0"

# Utilities
structlog = ">=24.1.0,<25.0.0"
python-multipart = ">=0.0.9,<1.0.0"
tenacity = ">=8.2.0,<9.0.0"
orjson = ">=3.9.0,<4.0.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["orchestrator"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "UP"]
ignore = []
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.mypy_cache
  | __pycache__
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "redisvl.*"
ignore_missing_imports = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"
filterwarnings = "ignore::DeprecationWarning"
log_cli = true
log_cli_level = "INFO"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.pytest.ini_options]
asyncio_mode = "auto"
